Adicionado novos uniformes

--- a/server.cfg
+++ b/server.cfg
@@ -83,14 +83,16 @@ start 2016_impala
 start 2016_FPIS
 
 #police skins
-start detective
 start ems
 start hway
 start police
-start sheriff
+#start sheriff
 start sheriffd
 start swat
 start bounty
+start gangunit
+start bcpd
+start lspd
 
 #job vehicles
 start repairtruck
@@ -133,6 +135,7 @@ start ak74u
 start magnum
 start winchester
 start bowie
+start awp
 
 #Keep this here, it stops some errors
 restart sessionmanager
