Ajustes nos uniformes da policia

--- a/server.cfg
+++ b/server.cfg
@@ -93,6 +93,7 @@ start bounty
 start gangunit
 start bcpd
 start lspd
+start cia
 
 #job vehicles
 start repairtruck
@@ -123,6 +124,7 @@ start jza80
 start porschecayman
 start sonata
 start rx7
+start rt70
 
 #Weapons
 start 38special
