Adicionado novos cargos para os bombeiros

--- a/server.cfg
+++ b/server.cfg
@@ -62,6 +62,7 @@ start BrockALPR
 start RealisticVehicleFailure
 start warmenu
 start k9
+start missionrow
 
 #condensed scripts (non-vrp)
 start CustomScripts
@@ -123,8 +124,9 @@ start bmwe65
 start jza80
 start porschecayman
 start sonata
-start rx7
+start rx7tunable
 start rt70
+start camaro
 
 #Weapons
 start 38special
