--- a/server.cfg
+++ b/server.cfg
@@ -63,6 +63,7 @@ start RealisticVehicleFailure
 start warmenu
 start k9
 start missionrow
+start vehshop
 
 #condensed scripts (non-vrp)
 start CustomScripts
