ajustes na policia: salario e garagens

--- a/server.cfg
+++ b/server.cfg
@@ -17,6 +17,8 @@ start rconlog
 #start scoreboard
 start mysql-async
 start playernames
+start object-loader
+start object-teleports
 
 #vrp
 start vrp_mysql
@@ -64,6 +66,7 @@ start warmenu
 start k9
 start missionrow
 start vehshop
+start bigjail
 
 #condensed scripts (non-vrp)
 start CustomScripts
@@ -181,4 +184,4 @@ add_principal identifier.steam:110000112345678 group.admin # add the admin to th
 sv_maxclients 32
 
 # Get a key from https://keymaster.fivem.net
-sv_licensekey dna4rj4sdk5xe53ivj2bp5eygkcpttwq
+sv_licensekey lgau0xo0i1rr04cdjyccfzkttdvuiso3
