LockSystem,RadarWhileDriving e HospitalHeal

--- a/server.cfg
+++ b/server.cfg
@@ -65,8 +65,11 @@ start RealisticVehicleFailure
 start warmenu
 start k9
 start missionrow
-start vehshop
+#start vehshop
 start bigjail
+start HospitalHeal
+start RadarWhileDriving
+start LockSystem
 
 #condensed scripts (non-vrp)
 start CustomScripts
@@ -184,4 +187,4 @@ add_principal identifier.steam:110000112345678 group.admin # add the admin to th
 sv_maxclients 32
 
 # Get a key from https://keymaster.fivem.net
-sv_licensekey lgau0xo0i1rr04cdjyccfzkttdvuiso3
+sv_licensekey rpjrat31tz3x8ozth5i434mshwc4r5h1
